# ida-mcp

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  REUSE.toml  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  publish.yml
LICENSES/: Apache-2.0.txt  MIT.txt
docs/: architecture.md  tools.md
scripts/: bump-version.sh  lint_ida_threading.py
src/ida_mcp/: __init__.py  _process.py  context.py  daemon.py  exceptions.py  helpers.py  models.py  proxy.py  resources.py  sandbox.py  server.py  session.py  supervisor.py  transforms.py  worker_provider.py
src/ida_mcp/prompts/: __init__.py  analysis.py  security.py  workflow.py
src/ida_mcp/tools/: advanced_analysis.py  analysis.py  assemble.py  bookmarks.py  cfg.py  chunks.py  colors.py  comments.py  ctree.py  data.py  database.py  decompiler.py  demangle.py  dirtree.py  entry_manip.py  enums.py  export.py  export_types.py  frames.py  func_flags.py  function_type.py  functions.py  imports_exports.py  load_data.py  makedata.py  nalt.py  names.py  operand_repr.py  operands.py  patching.py  processor.py  query.py  rebase.py  regfinder.py  regvars.py  search.py  segments.py  sig_gen.py  signatures.py  snapshots.py  (+9 more)
tests/: __init__.py  conftest.py  test_daemon_pure.py  test_exceptions.py  test_helpers_pure.py  test_idle_shutdown.py  test_logging_pure.py  test_process.py  test_proxy_pure.py  test_sandbox.py  test_server_pure.py  test_string_helpers.py  test_supervisor_pure.py  test_tool_brief_budget.py
