[project]
name = "ida-mcp"
version = "2.2.0.dev2"
description = "Headless IDA Pro MCP server using idalib"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE", "LICENSES/*"]
authors = [
    { name = "Joe T. Sylve, Ph.D.", email = "joe.sylve@gmail.com" }
]
requires-python = ">=3.12"
keywords = ["ida", "ida-pro", "mcp", "reverse-engineering", "binary-analysis", "idalib"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Security",
    "Topic :: Software Development :: Disassemblers",
    "Typing :: Typed",
]
dependencies = [
    "fastmcp[code-mode]>=3.1,<3.3",
    "mcp>=1.26,<2",
    "restrictedpython>=8.1,<9",
]

[project.urls]
Homepage = "https://github.com/jtsylve/ida-mcp"
Repository = "https://github.com/jtsylve/ida-mcp"
Issues = "https://github.com/jtsylve/ida-mcp/issues"
Documentation = "https://github.com/jtsylve/ida-mcp/tree/main/docs"

[dependency-groups]
dev = [
    "pre-commit>=4.5,<5",
    "pytest>=9.0,<10",
    "pytest-asyncio>=1.0,<2",
    "ruff>=0.15,<0.16",
]

[project.scripts]
ida-mcp = "ida_mcp.supervisor:main"
ida-mcp-worker = "ida_mcp.server:main"

[build-system]
requires = ["hatchling>=1.25,<2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ida_mcp"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # Pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
    "RUF",  # Ruff-specific rules
    "PIE",  # flake8-pie
    "PLC",  # Pylint conventions
    "PLE",  # Pylint errors
    "PLW",  # Pylint warnings
    "FURB", # refurb
    "PERF", # perflint
    "ASYNC", # flake8-async
]
ignore = [
    "E501",    # line length handled by formatter
    "UP035",   # don't force typing-extensions imports
    "ASYNC222", # os.waitpid with WNOHANG is non-blocking
    "ASYNC240", # os.path string ops (realpath/expanduser) don't do I/O
]

[tool.ruff.lint.isort]
known-third-party = [
    "fastmcp", "mcp",
    "idapro", "idc", "idautils",
    "ida_auto", "ida_bytes", "ida_dirtree", "ida_diskio", "ida_entry",
    "ida_enum", "ida_fixup", "ida_fpro", "ida_frame", "ida_funcs", "ida_gdl",
    "ida_hexrays", "ida_ida", "ida_idaapi", "ida_idp", "ida_kernwin", "ida_lines",
    "ida_loader", "ida_nalt", "ida_name", "ida_problems", "ida_range",
    "ida_regfinder", "ida_search", "ida_segment", "ida_srclang", "ida_strlist",
    "ida_struct", "ida_tryblks", "ida_typeinf", "ida_ua", "ida_undo", "ida_xref",
]
